# project1

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  security.yml  test.yml
LICENSES/: README.md
config/: corpus.yaml  default.yaml
docs/adr/: 0001-use-langgraph.md  0002-tooling.md  0003-vector-store-choice.md  0004-rrf-fusion.md  0005-chunking-strategy.md  0006-citation-enforcement.md  0007-ingestion-architecture.md  README.md
src/auth_rag/: __init__.py  _version.py  cli.py  exceptions.py  logging_config.py  settings.py
src/auth_rag/api/: __init__.py
src/auth_rag/chunking/: __init__.py  models.py  pipeline.py  recursive.py  section_aware.py  tokenizer.py
src/auth_rag/generation/: __init__.py
src/auth_rag/graph/: __init__.py
src/auth_rag/ingestion/: __init__.py  corpus_config.py  downloader.py  manifest.py  models.py  pipeline.py  rfc_parser.py  scrubber.py
src/auth_rag/retrieval/: __init__.py
src/auth_rag/verification/: __init__.py
tests/: conftest.py  test_cli.py  test_exceptions.py  test_logging.py  test_package.py  test_settings.py
tests/fixtures/: sample_rfc.py
tests/test_chunking/: test_models.py  test_pipeline.py  test_recursive.py  test_section_aware.py  test_tokenizer.py
tests/test_ingestion/: test_corpus_config.py  test_downloader.py  test_manifest.py  test_models.py  test_pipeline.py  test_rfc_parser.py  test_scrubber.py
